--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-web": "0.17.1",
     "react-native-web-swiper": "^2.2.1",
     "react-navigation": "^4.4.4",
+    "react-query": "^3.34.16",
     "styled-components": "^5.3.3",
     "uuid": "^8.3.2"
   },
@@ -36,7 +37,8 @@
     "@babel/core": "^7.12.9",
     "@types/styled-components": "^5.1.15",
     "@types/styled-components-react-native": "^5.1.3",
-    "babel-plugin-styled-components": "^1.13.3"
+    "babel-plugin-styled-components": "^1.13.3",
+    "typescript": "~4.3.5"
   },
   "private": true
 }
